[package]
name = "chainx-network"
version = "0.1.0"
authors = ["Chainpool <https://www.chainx.org>"]

[dependencies]
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-bft = { git = "https://github.com/paritytech/substrate" }
chainx-primitives = { path = "../primitives" }
chainx-consensus = { path = "../consensus" }
parity-codec-derive = { version = "~1.0" }
parity-codec = { version = "~1.0" }
chainx-api = { path = "../api" }
rhododendron = "0.3"
futures = "0.1"
tokio = "0.1.7"
log = "0.4"
