[package]
name = "chainx-pool"
version = "0.1.0"
authors = ["Chainpool  <http://www.chainx.org>"]

[dependencies]
substrate-extrinsic-pool = { git = "https://github.com/paritytech/substrate" }
sr-io = { git = "https://github.com/paritytech/substrate" }
srml-support = { git = "https://github.com/paritytech/substrate" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate" }
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate" }
substrate-client-db = { git = "https://github.com/paritytech/substrate" }
chainx-primitives = { path = "../primitives" }
chainx-runtime = { path = "../runtime" }
chainx-executor = {path = "../executor"}
parity-codec = { version = "^1.0" }
chainx-api = { path = "../api" }
triehash = { version = "0.2.3" }
error-chain = "0.12"
hex-literal = "0.1"
log = "0.3"

[dev-dependencies]
substrate-keyring = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
srml-staking = { git = "https://github.com/paritytech/substrate" }
srml-system = { git = "https://github.com/paritytech/substrate" }
srml-consensus = { git = "https://github.com/paritytech/substrate" }
