[package]
name = "chainx-primitives"
version = "2.0.8-1"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", features = ["derive"], optional = true }

# Substrate primitives
sp-application-crypto = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

# Substrate pallets
frame-system = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    # Substrate primitives
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    # Substrate pallets
    "frame-system/std",
]
