[package]
name = "chainx-primitives"
version = "5.2.1"
authors = ["The ChainX Authors"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate primitives
sp-application-crypto = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-core = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-runtime = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }
sp-std = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }

# Substrate pallets
frame-system = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "scale-info/std",
    # Substrate primitives
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    # Substrate pallets
    "frame-system/std",
]
