[package]
name = "chainx-rpc"
version = "2.0.8-1"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"

# Substrate client
sc-chain-spec = "2.0.1"
sc-client-api = "2.0.1"
sc-consensus-babe = "0.8.1"
sc-consensus-babe-rpc = "0.8.1"
sc-consensus-epochs = "0.8.1"
sc-finality-grandpa = "0.8.1"
sc-finality-grandpa-rpc = "0.8.1"
sc-keystore = "2.0.1"
sc-rpc = "2.0.1"
sc-rpc-api = "0.8.1"
sc-service = { version = "0.8.1", features = ["test-helpers"] }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", rev = "f14488dfca012659297d2b4676fab91c179095dd" }

# Substrate primitives
sp-api = "2.0.1"
sp-blockchain = "2.0.1"
sp-block-builder = "2.0.1"
sp-consensus = "0.8.1"
sp-consensus-babe = "0.8.1"
sp-keystore = "0.8.0"
sp-runtime = "2.0.1"
sp-state-machine = "0.8.1"
sp-transaction-pool = "2.0.1"

# Substrate pallets
frame-support = "2.0.1"
pallet-transaction-payment-rpc = "2.0.1"
substrate-frame-rpc-system = "2.0.1"

# ChainX runtime
chainx-runtime = { path = "../runtime/chainx" }

# ChainX primitives
chainx-primitives = { path = "../primitives" }

# ChainX pallets
xpallet-assets-rpc = { path = "../xpallets/assets/rpc" }
xpallet-assets-rpc-runtime-api = { path = "../xpallets/assets/rpc/runtime-api" }
xpallet-dex-spot-rpc = { path = "../xpallets/dex/spot/rpc" }
xpallet-dex-spot-rpc-runtime-api = { path = "../xpallets/dex/spot/rpc/runtime-api" }
xpallet-gateway-common-rpc = { path = "../xpallets/gateway/common/rpc" }
xpallet-gateway-common-rpc-runtime-api = { path = "../xpallets/gateway/common/rpc/runtime-api" }
xpallet-gateway-records-rpc = { path = "../xpallets/gateway/records/rpc" }
xpallet-gateway-records-rpc-runtime-api = { path = "../xpallets/gateway/records/rpc/runtime-api" }
xpallet-mining-asset-rpc = { path = "../xpallets/mining/asset/rpc" }
xpallet-mining-asset-rpc-runtime-api = { path = "../xpallets/mining/asset/rpc/runtime-api" }
xpallet-mining-staking-rpc = { path = "../xpallets/mining/staking/rpc" }
xpallet-mining-staking-rpc-runtime-api = { path = "../xpallets/mining/staking/rpc/runtime-api" }
xpallet-transaction-fee-rpc = { path = "../xpallets/transaction-fee/rpc" }
xpallet-transaction-fee-rpc-runtime-api = { path = "../xpallets/transaction-fee/rpc/runtime-api" }
xpallet-gateway-bitcoin-v2-rpc = { path = "../xpallets/gateway/bitcoin/v2/rpc" }
xpallet-gateway-bitcoin-v2-rpc-runtime-api = { path = "../xpallets/gateway/bitcoin/v2/rpc/runtime-api" }
