[package]
name = "runtime-api"
version = "0.4.0"
authors = ["Chainpool <http://www.chainx.org>"]
edition = "2018"

[dependencies]
# substrate
client = { package = "substrate-client", git = "https://github.com/chainpool/substrate", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/chainpool/substrate", default-features = false }
sr-primitives = { git = "https://github.com/chainpool/substrate", default-features = false }
# chainx
chainx-primitives = { path = "../primitives", default-features = false }
xr-primitives = { path = "../xr-primitives", default-features = false }
# chainx runtime module
xsupport = { package = "xrml-xsupport", path = "../xrml/xsupport", default-features = false }
xassets = { package = "xrml-xassets-assets", path = "../xrml/xassets/assets", default-features = false }
xrecords = { package = "xrml-xassets-records", path = "../xrml/xassets/records", default-features = false }
xspot= { package = "xrml-xdex-spot", path = "../xrml/xdex/spot",  default-features = false }
xbridge-common = { package = "xrml-xbridge-common", path = "../xrml/xbridge/common",  default-features = false }
xbitcoin = { package = "xrml-xbridge-bitcoin", path = "../xrml/xbridge/bitcoin",  default-features = false }

[features]
default = ["std"]
std = [
    # substrate
    "client/std",
    "rstd/std",
    "sr-primitives/std",
    # chainx
    "chainx-primitives/std",
    "xr-primitives/std",
    # chainx runtime
    "xsupport/std",
    "xassets/std",
    "xrecords/std",
    "xspot/std",
    "xbridge-common/std",
    "xbitcoin/std",
]
