[package]
name = "chainx-runtime"
version = "2.0.0"
authors = ["ChainX community <https://www.chainx.org>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"

# Substrate primitives
sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }

# Substrate pallets
frame-executive = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false, features = ["historical"] }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }

# ChainX primitives
chainx-primitives = { path = "../primitives", default-features = false }
xp-mining-staking = { path = "../primitives/mining/staking", default-features = false }

# ChainX pallets
xpallet-protocol = { path = "../xpallets/protocol", default-features = false }
xpallet-support = { path = "../xpallets/support", default-features = false }
xpallet-system = { path = "../xpallets/system", default-features = false }
xpallet-assets = { path = "../xpallets/assets", default-features = false }
xpallet-assets-rpc-runtime-api = { path = "../xpallets/assets/rpc/runtime-api", default-features = false }
xpallet-gateway-records = { path = "../xpallets/gateway/records", default-features = false }
xpallet-gateway-records-rpc-runtime-api = { path = "../xpallets/gateway/records/rpc/runtime-api", default-features = false }
xpallet-gateway-common = { path = "../xpallets/gateway/common", default-features = false }
xpallet-gateway-common-rpc-runtime-api = { path = "../xpallets/gateway/common/rpc/runtime-api", default-features = false }
xpallet-gateway-bitcoin = { path = "../xpallets/gateway/bitcoin", default-features = false }
xpallet-contracts = { path = "../xpallets/contracts", default-features = false }
xpallet-contracts-primitives = { path = "../xpallets/contracts/common", default-features = false }
xpallet-contracts-rpc-runtime-api = { path = "../xpallets/contracts/rpc/runtime-api", default-features = false }
xpallet-dex-spot = { path = "../xpallets/dex/spot", default-features = false }
xpallet-mining-staking = { path  = "../xpallets/mining/staking", default-features = false }
xpallet-mining-staking-rpc-runtime-api = { path  = "../xpallets/mining/staking/rpc/runtime-api", default-features = false }
xpallet-mining-asset = { path  = "../xpallets/mining/asset", default-features = false }
xpallet-transaction-payment = { path = "../xpallets/transaction-payment", default-features = false }
xpallet-transaction-payment-rpc-runtime-api = { path = "../xpallets/transaction-payment/rpc/runtime-api", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc4", default-features = false }

[features]
default = ["std", "pallet-session/historical"]
std = [
    "codec/std",
    "serde",

    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",

    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",

    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-session/std",
    "pallet-offences/std",
    "pallet-timestamp/std",
    "pallet-utility/std",
    "pallet-multisig/std",

    "chainx-primitives/std",
    "xp-mining-staking/std",

    "xpallet-protocol/std",
    "xpallet-support/std",
    "xpallet-system/std",
    "xpallet-assets/std",
    "xpallet-assets-rpc-runtime-api/std",
    "xpallet-gateway-records/std",
    "xpallet-gateway-records-rpc-runtime-api/std",
    "xpallet-gateway-common/std",
    "xpallet-gateway-common-rpc-runtime-api/std",
    "xpallet-gateway-bitcoin/std",
    "xpallet-contracts/std",
    "xpallet-contracts-primitives/std",
    "xpallet-contracts-rpc-runtime-api/std",
    "xpallet-dex-spot/std",
    "xpallet-mining-staking/std",
    "xpallet-mining-staking-rpc-runtime-api/std",
    "xpallet-mining-asset/std",
    "xpallet-transaction-payment/std",
    "xpallet-transaction-payment-rpc-runtime-api/std",
]
